--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 
+local_backend: true
+
 media_folder: "public/uploads"
 public_folder: "/uploads"
 
